(+) api verify token

--- a/src/modules/mail/templates/token.pug
+++ b/src/modules/mail/templates/token.pug
@@ -49,5 +49,5 @@ html(lang="en")
       h2 Reset Password
       p Silakan gunakan kode berikut untuk mereset password Anda:
       .token= token
-      p Jika Anda tidak merasa melakukan permintaan ini, Anda dapat mengabaikan email ini.
+      p Token akan aktif selama 1 menit. Jika Anda tidak merasa melakukan permintaan ini, Anda dapat mengabaikan email ini.
       p Terima kasih.
